compiler/testData/diagnostics/tests/regressions/ea43298.fir.kt
import A.<!SYNTAX!><!>;

class A
